// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot tests Tipseen content tests renders correctly with dismiss 1`] = `
<div
  className="tipseenBasicContent"
  data-testid="tipseen-content"
>
  <div
    className="buttons"
  >
    <button
      aria-busy={false}
      aria-disabled={false}
      className="dismiss button sizeSmall kindTertiary colorOnPrimaryColor"
      data-testid="tipseen-content-dismiss"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Dismiss
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="button sizeSmall kindPrimary colorOnPrimaryColor"
      data-testid="tipseen-content-submit"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Submit
    </button>
  </div>
</div>
`;

exports[`Snapshot tests Tipseen content tests renders correctly without props 1`] = `
<DocumentFragment>
  <div
    class="tipseenBasicContent"
    data-testid="tipseen-content"
  >
    <div
      class="buttons"
    >
      <button
        aria-busy="false"
        aria-disabled="false"
        class="button sizeSmall kindPrimary colorOnPrimaryColor"
        data-testid="tipseen-content-submit"
        style="color: rgba(0, 0, 0, 0);"
        type="button"
      >
        Submit
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Snapshot tests Tipseen content tests renders correctly without submit 1`] = `
<div
  className="tipseenBasicContent"
  data-testid="tipseen-content"
>
  <div
    className="buttons"
  />
</div>
`;

exports[`Snapshot tests Tipseen tests renders correctly with dark close button theme 1`] = `
<DocumentFragment>
  <div
    class="monday-storybook-tipseen_container"
  />
  <span
    class="monday-style-dialog-content-wrapper contentWrapper"
    data-popper-reference-hidden="false"
    data-testid="tooltip"
    style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 4px);"
  >
    <div
      class="contentComponent bottom hasTooltip"
    >
      <div
        class="tooltip dark tipseenWrapper tipseenWrapperWithoutCustomWidth"
      >
        <div
          class="content"
        >
          <div>
            <div
              class="tipseenHeader"
            >
              <button
                aria-busy="false"
                aria-disabled="false"
                aria-label="Close"
                class="tipseenCloseButton dark button sizeMedium kindTertiary colorDark noSidePadding"
                data-testid="icon-button"
                style="justify-content: center; align-items: center; padding: 0px; width: 24px; height: 24px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="icon noFocusStyle"
                  data-testid="icon"
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 20 20"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M6.53033 5.46967C6.23744 5.17678 5.76256 5.17678 5.46967 5.46967C5.17678 5.76256 5.17678 6.23744 5.46967 6.53033L8.62562 9.68628L5.47045 12.8415C5.17756 13.1343 5.17756 13.6092 5.47045 13.9021C5.76334 14.195 6.23822 14.195 6.53111 13.9021L9.68628 10.7469L12.8415 13.9021C13.1343 14.195 13.6092 14.195 13.9021 13.9021C14.195 13.6092 14.195 13.1343 13.9021 12.8415L10.7469 9.68628L13.9029 6.53033C14.1958 6.23744 14.1958 5.76256 13.9029 5.46967C13.61 5.17678 13.1351 5.17678 12.8422 5.46967L9.68628 8.62562L6.53033 5.46967Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
            <p
              class="typography onInverted start text text2Normal tipseenContent"
              data-testid="text"
              style="--text-clamp-lines: 1;"
            />
          </div>
        </div>
      </div>
      <div
        class="arrow arrow dark"
        data-placement="bottom"
        style="position: absolute; left: 0px; transform: translate(0px, 0px) rotate(45deg);"
      />
    </div>
  </span>
</DocumentFragment>
`;

exports[`Snapshot tests Tipseen tests renders correctly with floating variation 1`] = `
<span
  class="monday-style-dialog-content-wrapper contentWrapper"
  data-popper-reference-hidden="false"
  data-testid="tooltip"
  style="position: absolute; left: 0px; top: 0px;"
>
  <div
    class="contentComponent bottom"
  >
    <div
      class="tooltip dark tipseenWrapper tipseenWrapperWithoutCustomWidth floating"
    >
      <div
        class="content"
      >
        <div>
          <div
            class="tipseenHeader"
          >
            <button
              aria-busy="false"
              aria-disabled="false"
              aria-label="Close"
              class="tipseenCloseButton button sizeMedium kindTertiary colorOnInvertedBackground noSidePadding"
              data-testid="icon-button"
              style="justify-content: center; align-items: center; padding: 0px; width: 24px; height: 24px;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon noFocusStyle"
                data-testid="icon"
                fill="currentColor"
                height="16"
                viewBox="0 0 20 20"
                width="16"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.53033 5.46967C6.23744 5.17678 5.76256 5.17678 5.46967 5.46967C5.17678 5.76256 5.17678 6.23744 5.46967 6.53033L8.62562 9.68628L5.47045 12.8415C5.17756 13.1343 5.17756 13.6092 5.47045 13.9021C5.76334 14.195 6.23822 14.195 6.53111 13.9021L9.68628 10.7469L12.8415 13.9021C13.1343 14.195 13.6092 14.195 13.9021 13.9021C14.195 13.6092 14.195 13.1343 13.9021 12.8415L10.7469 9.68628L13.9029 6.53033C14.1958 6.23744 14.1958 5.76256 13.9029 5.46967C13.61 5.17678 13.1351 5.17678 12.8422 5.46967L9.68628 8.62562L6.53033 5.46967Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
          <p
            class="typography onInverted start text text2Normal tipseenContent"
            data-testid="text"
            style="--text-clamp-lines: 1;"
          />
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Snapshot tests Tipseen tests renders correctly without close - deprecated version 1`] = `
<DocumentFragment>
  <div
    class="monday-storybook-tipseen_container"
  />
  <span
    class="monday-style-dialog-content-wrapper contentWrapper"
    data-popper-reference-hidden="false"
    data-testid="tooltip"
    style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 4px);"
  >
    <div
      class="contentComponent bottom hasTooltip"
    >
      <div
        class="tooltip dark tipseenWrapper tipseenWrapperWithoutCustomWidth"
      >
        <div
          class="content"
        >
          <div>
            <div
              class="tipseenHeader"
            >
              <button
                aria-busy="false"
                aria-disabled="false"
                aria-label="Close"
                class="tipseenCloseButton button sizeMedium kindTertiary colorOnInvertedBackground noSidePadding"
                data-testid="icon-button"
                style="justify-content: center; align-items: center; padding: 0px; width: 24px; height: 24px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="icon noFocusStyle"
                  data-testid="icon"
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 20 20"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M6.53033 5.46967C6.23744 5.17678 5.76256 5.17678 5.46967 5.46967C5.17678 5.76256 5.17678 6.23744 5.46967 6.53033L8.62562 9.68628L5.47045 12.8415C5.17756 13.1343 5.17756 13.6092 5.47045 13.9021C5.76334 14.195 6.23822 14.195 6.53111 13.9021L9.68628 10.7469L12.8415 13.9021C13.1343 14.195 13.6092 14.195 13.9021 13.9021C14.195 13.6092 14.195 13.1343 13.9021 12.8415L10.7469 9.68628L13.9029 6.53033C14.1958 6.23744 14.1958 5.76256 13.9029 5.46967C13.61 5.17678 13.1351 5.17678 12.8422 5.46967L9.68628 8.62562L6.53033 5.46967Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
            <p
              class="typography onInverted start text text2Normal tipseenContent"
              data-testid="text"
              style="--text-clamp-lines: 1;"
            />
          </div>
        </div>
      </div>
      <div
        class="arrow arrow dark"
        data-placement="bottom"
        style="position: absolute; left: 0px; transform: translate(0px, 0px) rotate(45deg);"
      />
    </div>
  </span>
</DocumentFragment>
`;

exports[`Snapshot tests Tipseen tests renders correctly without close 1`] = `
<DocumentFragment>
  <div
    class="monday-storybook-tipseen_container"
  />
  <span
    class="monday-style-dialog-content-wrapper contentWrapper"
    data-popper-reference-hidden="false"
    data-testid="tooltip"
    style="position: absolute; left: 0px; top: 0px;"
  >
    <div
      class="contentComponent bottom hasTooltip"
    >
      <div
        class="tooltip dark tipseenWrapper tipseenWrapperWithoutCustomWidth"
      >
        <div
          class="content"
        >
          <div>
            <div
              class="tipseenHeader"
            />
            <p
              class="typography onInverted start text text2Normal tipseenContent"
              data-testid="text"
              style="--text-clamp-lines: 1;"
            />
          </div>
        </div>
      </div>
      <div
        class="arrow arrow dark"
        data-placement="bottom"
        style="position: absolute;"
      />
    </div>
  </span>
</DocumentFragment>
`;

exports[`Snapshot tests Tipseen tests renders correctly without props 1`] = `
<div
  className="monday-storybook-tipseen_container"
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
/>
`;

exports[`Snapshot tests TipseenTitle should render correctly with given text 1`] = `
<div
  aria-level={3}
  className="typography inherit start multiLineEllipsis text text1Bold title"
  data-testid="tipseen-title"
  role="heading"
>
  I'm a title
</div>
`;

exports[`Snapshot tests TipseenTitle should render null without text 1`] = `null`;
